# ircord-android

./: .gitignore  BIOMETRIC_AUTH.md  CERTIFICATE_PINNING.md  CLAUDE.md  DATABASE_ENCRYPTION.md  FCM_SETUP.md  README.md  TODO.md  build.gradle.kts  local.properties  settings.gradle.kts
.maestro/: config.yaml
.maestro/flows/: android-docs-chat.yaml  android-docs-settings.yaml  android-docs-setup.yaml  android-docs-voice.yaml
app/: build.gradle.kts  proguard-rules.pro
app/include/openssl/: configuration.h
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/crypto/: crypto_engine.cpp  crypto_engine.hpp  group_session.cpp  group_session.hpp  identity.cpp  signal_store.cpp
app/src/main/cpp/jni/: jni_bridge.cpp  jni_voice_bridge.cpp
app/src/main/cpp/voice/: voice_engine.cpp  voice_engine.hpp
app/src/main/java/fi/ircord/android/: IrcordApp.kt  MainActivity.kt
app/src/main/java/fi/ircord/android/crypto/: NativeCrypto.kt  NativeStore.kt
app/src/main/java/fi/ircord/android/data/local/: EncryptedDatabaseFactory.kt  IrcordDatabase.kt  Migrations.kt
app/src/main/java/fi/ircord/android/data/local/dao/: ChannelDao.kt  ChannelMemberDao.kt  LinkPreviewDao.kt  MessageDao.kt  PeerIdentityDao.kt
app/src/main/java/fi/ircord/android/data/local/entity/: ChannelEntity.kt  ChannelMemberEntity.kt  LinkPreviewEntity.kt  MessageEntity.kt  PeerIdentityEntity.kt
app/src/main/java/fi/ircord/android/data/local/preferences/: UserPreferences.kt
app/src/main/java/fi/ircord/android/data/remote/: FrameCodec.kt  IrcordCommands.kt  IrcordConnectionManager.kt  IrcordSocket.kt  ProtobufExt.kt  ReconnectPolicy.kt
app/src/main/java/fi/ircord/android/data/repository/: ChannelMemberRepository.kt  ChannelRepository.kt  CryptoRepository.kt  FileRepository.kt  KeyRepository.kt  LinkPreviewRepository.kt  MessageRepository.kt  VoiceRepository.kt
app/src/main/java/fi/ircord/android/di/: AppModule.kt  DatabaseModule.kt  NetworkModule.kt  PreferencesModule.kt
app/src/main/java/fi/ircord/android/domain/model/: Channel.kt  FileTransfer.kt  Message.kt  User.kt  VoiceState.kt
app/src/main/java/fi/ircord/android/fcm/: FcmRepository.kt  IrcordInstanceIdService.kt  IrcordMessagingService.kt
app/src/main/java/fi/ircord/android/native/: NativeCrypto.kt  NativeStore.kt  NativeVoice.kt
app/src/main/java/fi/ircord/android/ndk/: NativeCrypto.kt  NativeStore.kt  NativeVoice.kt
app/src/main/java/fi/ircord/android/security/biometric/: BiometricAuthManager.kt  BiometricCryptoManager.kt  BiometricPrompt.kt
app/src/main/java/fi/ircord/android/security/database/: DatabaseEncryptionManager.kt
app/src/main/java/fi/ircord/android/security/pinning/: CertificatePin.kt  CertificatePinner.kt  PinRepository.kt
app/src/main/java/fi/ircord/android/service/: IrcordService.kt  VoiceService.kt
app/src/main/java/fi/ircord/android/ui/components/: EncryptionBadge.kt  FileTransferProgress.kt  StatusBadge.kt  UserAvatar.kt  VoicePill.kt
app/src/main/java/fi/ircord/android/ui/navigation/: IrcordNavGraph.kt  NavigationViewModel.kt
app/src/main/java/fi/ircord/android/ui/screen/auth/: SetupScreen.kt  SetupViewModel.kt
app/src/main/java/fi/ircord/android/ui/screen/channels/: ChannelListScreen.kt  ChannelListViewModel.kt  JoinChannelDialog.kt
app/src/main/java/fi/ircord/android/ui/screen/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/fi/ircord/android/ui/screen/filetransfer/: FileTransferViewModel.kt
app/src/main/java/fi/ircord/android/ui/screen/notifications/: NotificationSettingsScreen.kt  NotificationSettingsViewModel.kt
app/src/main/java/fi/ircord/android/ui/screen/settings/: BiometricSettingsScreen.kt  BiometricSettingsViewModel.kt  CertificatePinningScreen.kt  CertificatePinningViewModel.kt  FontSizeSelectorDialog.kt  SettingsScreen.kt  SettingsViewModel.kt  ThemeSelectorDialog.kt
app/src/main/java/fi/ircord/android/ui/screenshot/: ScreenshotScenes.kt
app/src/main/java/fi/ircord/android/ui/security/: ScreenSecurity.kt
app/src/main/java/fi/ircord/android/ui/theme/: Color.kt  FontScaleViewModel.kt  Shape.kt  Spacing.kt  Theme.kt  ThemeViewModel.kt  Type.kt
app/src/main/proto/: ircord.proto
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
artifacts/2026-03-14_082959/: commands-(android-docs-setup).json
artifacts/2026-03-14_083230/: commands-(android-docs-setup).json
artifacts/2026-03-14_083347/: commands-(android-docs-setup).json
artifacts/2026-03-14_083701/: commands-(android-docs-setup).json
artifacts/2026-03-14_084401/: ai-report-android-docs-setup.html  commands-(android-docs-setup).json
artifacts/2026-03-14_085139/: commands-(android-docs-setup).json
artifacts/2026-03-14_085243/: ai-report-android-docs-chat.html  commands-(android-docs-chat).json  commands-(android-docs-setup).json
artifacts/2026-03-14_090608/: ai-(android-docs-setup).json  ai-report-android-docs-setup.html  commands-(android-docs-chat).json  commands-(android-docs-setup).json
artifacts/2026-03-14_090828/: commands-(android-docs-setup).json
artifacts/2026-03-14_091147/: commands-(android-docs-chat).json  commands-(android-docs-setup).json
artifacts/2026-03-14_091342/: commands-(android-docs-setup).json
artifacts/2026-03-14_091852/: ai-(android-docs-chat).json  ai-(android-docs-settings).json  ai-(android-docs-voice).json  ai-report-android-docs-chat.html  ai-report-android-docs-settings.html  ai-report-android-docs-setup.html  ai-report-android-docs-voice.html  commands-(android-docs-chat).json  commands-(android-docs-settings).json  commands-(android-docs-setup).json  commands-(android-docs-voice).json
docs/: server-architecture.md
docs/android/: architecture.md  design-tokens.md
docs/plans/: 2026-03-15-tier1-features-design.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
openssl-3.6.1/: NOTES-ANDROID.md
(+14 files in other folders)
